<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chtl_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize"
    android:layout_marginTop="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="50dp"
            android:text="@string/newPlant"
            android:visibility="visible" />

        <TextView
            android:id="@+id/recommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/recommended" />

        <TextView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"

            android:text="@string/top" />


    </LinearLayout>

</androidx.appcompat.widget.Toolbar>