
<!-- SignUp page -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_page"
    android:clipToOutline="true"
    android:elevation="50dp">
    <!-- chevron-left -->
    <!-- chevron-left -->
    <!-- Log in to -->
    <!-- PlantStore -->

    <TextView
        android:id="@+id/sign_up_to"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="74dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="top"
        android:text="@string/sign_up_to"
        android:textAppearance="@style/log_in_to" />

    <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et -->

    <!-- pngfind 1 -->

    <!-- Rectangle 1 -->
    <!-- E-Mail -->

    <TextView
        android:id="@+id/plantsdeck"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="118dp"
        android:fontFamily="@font/kaushan_script"
        android:gravity="top"
        android:text="@string/app_name"
        android:textAppearance="@style/app_name" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="311dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="208dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/login_text"
        android:textAppearance="@style/login_text" />

    <View
        android:id="@+id/pngfind_1"
        android:layout_width="168.78dp"
        android:layout_height="154.18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="223dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/pngfinf_1" />


    <!-- Password-->

    <View
        android:id="@+id/rectangle_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="265dp"

        android:background="@drawable/rectangle1" />

    <TextView
        android:id="@+id/email"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="286dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/e_mail"
        android:textAlignment="viewStart"
        android:textAppearance="@style/e_mail"
        app:lineHeight="24sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/password"
        android:textAlignment="viewStart"
        android:textAppearance="@style/e_mail"
        app:lineHeight="24sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppins_light"
        android:hint="     Type your password here"
        android:inputType="textPassword"
        android:textAppearance="@style/type_your_e"
        android:textColor="#1C2826"
        android:textColorHint="#661C2826" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="329dp"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppins_light"
        android:hint="     Type your email here"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/type_your_e"
        android:textColor="#1C2826"
        android:textColorHint="#661C2826" />

    <!-- Forgot Password -->
    <!-- Sign-In -->

    <TextView
        android:id="@+id/reenter_pwd"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="519dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/reenter_pwd"
        android:textAlignment="viewStart"
        android:textAppearance="@style/e_mail"
        app:lineHeight="24sp" />





    <EditText
        android:id="@+id/password_validation"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppins_light"
        android:hint="     Retype your password here"
        android:inputType="textPassword"
        android:textAppearance="@style/type_your_e"
        android:textColor="#1C2826"
        android:textColorHint="#661C2826" />

    <View
        android:id="@+id/sign_up_button"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="646dp"
        android:background="@drawable/rectangle3" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="109dp"
        android:layout_height="51dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="654dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up" />

    <TextView
        android:id="@+id/log_in_text"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="278dp"
        android:layout_marginTop="711dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/log_in"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/forgot_pass" />

</RelativeLayout>