
<!-- Welcome Screen -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_scr"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/greenbg"
    android:clipToOutline="true"
    android:visibility="visible">


    <!-- Welcome to -->

    <View
        android:id="@+id/pngfind_1"
        android:layout_width="438dp"
        android:layout_height="327dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-110dp"
        android:layout_marginTop="111dp"
        android:background="@drawable/pngfinf_1"
        android:visibility="visible" />

    <!-- Bit more than a usual shopping app and no less than a socialising app -->

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="516dp"
        android:clickable="true"
        android:fontFamily="@font/kaushan_script"
        android:gravity="top"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/app_name" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="477dp"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="center"
        android:gravity="top"
        android:text="@string/welcome_to"

        android:textAppearance="@style/welcome_to" />

    <TextView
        android:id="@+id/bit_more_th"
        android:layout_width="291dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="659dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/bit_more_th"
        android:textAppearance="@style/bit_more_th" />

</RelativeLayout>
