
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onboarding_"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/onboarding_1"
    android:clipToOutline="true">
    <!-- Group 2 -->
    <!-- Ellipse 4 -->

    <View
        android:id="@+id/group_2"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="69dp"
        android:background="#00000000" />



    <TextView
        android:id="@+id/plantsdeck"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/kaushan_script"
        android:gravity="top"
        android:text="@string/app_name"
        android:textAppearance="@style/app_name_2" />

    <View
        android:id="@+id/pngegg_1_1"
        android:layout_width="238dp"
        android:layout_height="353dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/pngegg_"
        android:elevation="9.04dp" />

    <View
        android:id="@+id/log_in_button"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="601dp"
        android:background="@drawable/rectangle2" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="612dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in" />

    <View
        android:id="@+id/sign_up_button"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="671dp"
        android:background="@drawable/rectangle3" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="682dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up" />


</RelativeLayout>